# ChangeLog for sys-process/cronie
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-process/cronie/ChangeLog,v 1.64 2015/02/28 21:30:03 tgall Exp $

  28 Feb 2015;  <tgall@gentoo.org> cronie-1.4.12.ebuild:
  stable on arm64

  25 Feb 2015; Mikle Kolyada <zlogene@gentoo.org> cronie-1.4.12.ebuild:
  alpha/ia64/sparc stable wrt bug #533276

  16 Jan 2015; Sergey Popov <pinkbyte@gentoo.org> cronie-1.4.12.ebuild:
  Stable on ppc/ppc64/x86, wrt bug #533276

  30 Dec 2014; Markus Meier <maekke@gentoo.org> cronie-1.4.12.ebuild:
  arm stable, bug #533276

  22 Dec 2014; Mikle Kolyada <zlogene@gentoo.org> cronie-1.4.12.ebuild:
  amd64 stable wrt bug #533276

  22 Dec 2014; Jeroen Roovers <jer@gentoo.org> cronie-1.4.12.ebuild:
  Stable for HPPA (bug #533276).

*cronie-1.4.12 (22 Sep 2014)

  22 Sep 2014; Lars Wendler <polynomial-c@gentoo.org> +cronie-1.4.12.ebuild:
  Version bump.

  07 Sep 2014; Jack Morgan <jmorgan@gentoo.org> cronie-1.4.11-r3.ebuild:
  sparc, ppc, ppc64 stable

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> cronie-1.4.11-r1.ebuild,
  cronie-1.4.11-r3.ebuild:
  QA: drop trailing '.' from DESCRIPTION

  05 Jul 2014; Mikle Kolyada <zlogene@gentoo.org> cronie-1.4.11-r3.ebuild:
  Add ~s390 keyword wrt bug #497394

*cronie-1.4.11-r3 (18 Apr 2014)

  18 Apr 2014; Lars Wendler <polynomial-c@gentoo.org> -cronie-1.4.11-r2.ebuild,
  +cronie-1.4.11-r3.ebuild, files/cronie-1.3-crontab:
  Only use anachron if /etc/cron.hourly/0anacron is executable.

*cronie-1.4.11-r2 (30 Mar 2014)

  30 Mar 2014; Lars Wendler <polynomial-c@gentoo.org> +cronie-1.4.11-r2.ebuild,
  +files/cronie-1.3-crontab:
  Attempt to fix installation of anacron as suggested by Matthew Schultz in bug
  #503666.

  26 Mar 2014; Christian Ruppert <idl0r@gentoo.org> cronie-1.4.11-r1.ebuild:
  Enable inotify by default

  04 Mar 2014; Lars Wendler <polynomial-c@gentoo.org> files/anacron-1.0-initd,
  files/cronie-1.3-initd: