@@ -1,13 +1,30 @@
-AUX anacron-1.0-initd 596 SHA256 7ff283ee8b492929d33831461b72e872fe9d3a98344cf39af442f575875b0132 SHA512 2d194102ec0925e1cb99969cac5f69028e1e94afdec590a4292c23c1b87185894c1bae8c2d220223f79fc4fde3d56030f900b764f474fca235c8cbf5adcc182a WHIRLPOOL 5afc6503ce81bb8a802d460b4eb6526a54f6844a7311c950318821c6838b0f5c5974b1d1c4d9f894af92704e25d8653eca1943ff94e4a33a32d1415b0f056124
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX cronie-1.2-cron.deny 216 SHA256 4a857b2c58bb10d4aefbdd7d4a41710456a8cc27774c365e361ca5271128e0b8 SHA512 88b4bf039d5677e9b63fffa5b40bcfb15bd5fe3e76db6ef8dabe2c7b2fe9f7c45ef8cc0fc2087457f5ec364bcc7dee7548df5b98f1c88cbf9df495b12a601a04 WHIRLPOOL 2f02d1db5b2650ca63345445010853016f1d397aa45c1031d0518fff3702e3eb3ed52b3835fa22f8a637a53b4de193ac74aa3ca190fa9739f161760d11398f44
-AUX cronie-1.2-crontab 605 SHA256 369665b00a9f278fb57e6c2e285d6335b38970474d27e7563b68a65aa1045d4b SHA512 12bab43416f76102441be8af99696778e4bd13c704dcda22f7bc4c4f388a2163470c37b1e7d981d49d057b7ece4a1fa8d4c2f4a168db216ecadbe0a570c46905 WHIRLPOOL 440d2d5ae1cf2ed3b2d8bd472927f6136bd6339b8f7e71896cba300b78dff63d9e3e3a55e56754708710e8307b847279761604aaa9c19fa26eb524c02bac2019
 AUX cronie-1.3-crontab 833 SHA256 700714927dea9ed271924817863e9b45cb50b3dd650bd00e072f09aadc4c3684 SHA512 9c21d9ab6f7ae45f75b3f681abdfb043f1ba61c8522fb6cd2a6ffd32a628b3dc07c4011c1fbe43228016fe670d99a230ebdcac08d0ace12ec749cff4f2a85895 WHIRLPOOL 4c60338d73a6163812802b23377ec93dfe3a29339bd01d5f24fcd17ed4b749354d5660464d334c06b04de1cfd9540ba78d732695759fc0d8880904646030d984
 AUX cronie-1.3-initd 395 SHA256 292a7b20fe33bd027357475fea6aa1194afa7e5c1c47a85299db945b9d1c847e SHA512 e52ddbf1a7235aff7756478f807e5c10cccf729d9cbd52294db767b958a5640f3645f3f5784618b55aca302808755707d3eca667637c1f93a233aa83365f567f WHIRLPOOL 112e78802d59aac029d33e3ec8cb833b29417a13ab6212393f15f09b42906d56d92501ac8bad972e3fb91d9255067795b32f4fd0589cedfd2f337572cc2576c5
 AUX cronie-1.4.3-pamd 231 SHA256 c281c9b8fb4984e20142a7e099d7032192d5c2ca2eb02ece5eb4f73ca64593dd SHA512 32268d8b097e60eb039c023647ecd651b6940a8fe1587111ce0d49314bbb2de451214f98b7b703fd284e231c10bc4e616d4d0c63c107d9cdbc2bb470a17f2c3a WHIRLPOOL 171dbaa3a49aec2731d1cd78a1a4168369a1a0596b98049fd9c026ab9af54e97fdcf81416fa4fe8201c232dcdf891c4d3e81da20ddfa103eae458094c2095424
-DIST cronie-1.4.11.tar.gz 222665 SHA256 fd08084cedddbb42499f80ddb7f2158195c3555c2ff40ee11d4ece2f9864d7be SHA512 acf998642266f812dfa5a00737f72ae2d36dfab9edddd3d99a9f6545415f7f6dc980d1401ec8a39b865cf54336853f190d3c542be3281dc368e0d5bc5c7f3e5f WHIRLPOOL 243e145b25928d4cdca22f3c85a6aa9a99e8dca239684debf4fd382bdc25945123054ac0b54e609d882550aae08eda7d8202ab29a7f122b5555b0807666edb19
 DIST cronie-1.4.12.tar.gz 234214 SHA256 0f5c9bf32f352599451c4ca0d6bc076d19e73ecfa5a90b34ecfe47c918c8bafd SHA512 ff17c9a1ba39957727db390d28d21248f05414f55119094d99a646695698e1b148b920f3fc91e9733b862bc8ce226824d290fff51abe17410a0e63ab3b424865 WHIRLPOOL 61a6a7c3a660bbbb38ff2b7b700fe6fa84b1144d20d658e26f4cde522f6fc3faa6141f4cb176f78cfb22cfb50e17f2a945aeb382761ba2aa1b25e6e16ad20082
-EBUILD cronie-1.4.11-r1.ebuild 2078 SHA256 811837bb2f2129c644a2dbe222e57b9342080f297f32917115ea36377ae6ad05 SHA512 f786deb1daa02068c9ebbe2377f7f69f151d9c39dfbdaf0c1cccc5ee506428a8a3efae5a3cad2bee76dcbc03314f1174eb2cf7c43915cabc2c727fae65c6a724 WHIRLPOOL 500a82a0e357ec4a6dedadb487b77508a443cfad7fa9dfb8f63942943b3b4f523c25cbea22c4a60bb984e2f1e37edff06e9ab5a99016221ef31c253d86bf6487
-EBUILD cronie-1.4.11-r3.ebuild 2022 SHA256 fa3a7d65eebed1c55c83940feb0850bc7b6cf606d12095f400df81fdeb1218d5 SHA512 08a3da61c64a97a80440e36b52b363650d508fc93c5136815ce7888584ebe1076fe4e833fbac948ca05aa7a29798745b7f93c4367abedfa59d11fa79b97fcebf WHIRLPOOL cf52decc671df129a9032ca5b66f21d4feb7ab0ff57e1719887bc4e8d0fb395570069ba0d75ad4aecd6828be73f30ce121e62e35471053a65f2f84d70b854ba1
+DIST cronie-1.5.0.tar.gz 242072 SHA256 9cf0e3f4f5042a9c09413d62c8e0c055e12401f70b112465f0f81f2c84ebfb3f SHA512 cad4d78cbb58ea32d1093890b316b6599d115b29f367eecc2e4a0a3560ab85ac85aa159886c883e46defb6212432d37f425396cfca686e4dd8526102ca4dd8fe WHIRLPOOL 69cb81b1d5673137132d921f8ed917e83965c5511004f58d386bb36e40787d30c640a3527d933346f3071b781c217b3001ee089045841ff054b965638e217744
 EBUILD cronie-1.4.12.ebuild 2017 SHA256 f494ab02c7cec5616a2023b3ba49c813de9170d0829b0f63a49078866e351e4f SHA512 ecea50e1480c9ec2c6763f376ac59d2e27d06da4c1e62d9c5ef9a8fdcaf1e1c24b67fee302ded80e71e80791a4f39e7a9c926bb68937c640713727c286d6aff0 WHIRLPOOL 8dbf2261ae66176a49de75069278deaa0185661d265b28e6788fb2ad5b655012617870390f4336334115d160e6017e55830ece853352b9a1ec4b1e3133856b80
-MISC ChangeLog 9910 SHA256 9afbc69e54b168dbe8d0239f98e0ec1e2848297de6ad3d5f571abbc683363479 SHA512 cc25149a37e9045ce1dff425eb3607c85a2c404e01b803bfaea4f207764a19497bc0f52327ea20f92ccf04e68f0bdf91abed08d72b6db511166003e2d70b9f24 WHIRLPOOL d13ecebdd485ff61d1664e470663ecdcb29248e6130a37bc0fc9c56b124416f85abeca16cfc170f4d37bebf8ec9692670b0902c80f4e7ea0bf077432c8beefe2
+EBUILD cronie-1.5.0.ebuild 2038 SHA256 68b3234aec81d752abf825c3f3c9b4abcbac3f8a07c31053d7b0f88692112e06 SHA512 22729f2ed1c050501b832e2a5091fb0414bd0defd6a6d246e38312677b4c1d59dc0a59ff9808cba64c12fea11b6567f0feb8d5074d904052aefb230bb0140f36 WHIRLPOOL c1ed344a765ef369bc76bbe179071f726db142b8aea050282e358143ba6d5d2f13d27ae10e9dca1b3f8e54efcb5f058c18b2054328620731ed113f49883384a2
+MISC ChangeLog 10175 SHA256 daaccc285d737ec8c7e5e968b7e370ae6aa261392be2b464aa09e2affaff8788 SHA512 9df4a097ec103922cec1aaa33cb83bd0aebcf16b2d46d61a81d653b88ee4c9008fde8f78f92775b370d4091b6551ff9bcc162d7a21f9b19e95b99525b584753f WHIRLPOOL 6eade318d76675eed14785f278f3eb56c4bd23533b8cc42b8d1ce645d2a977e0ce7001c1d5b9d5d9802cd1461e35e7b647b97291e207331647adbaaae1378682
 MISC metadata.xml 799 SHA256 fe8f004016da48f9eaf570c4777bd407f210d468e8779d8db538b5fa1f0dad7d SHA512 9bae8c4edf33af2e6d25aa9db003d40525895dc21ca3388a303a7bba851a0bbe46ac0d254e0aa9c84da8f5c1d2b0e0042e1e317f717c1bd53fe388849366da82 WHIRLPOOL a9e7f4565bc909bc44dc4b676edc48794e8da7235a33b9289fcf53de65fb3406662560588d80fbed90873a9a56fcf00a0ec03fd80325ec2c8e56b9a38b66e01a
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQIcBAEBCAAGBQJVZ+0VAAoJEPiazRVxLXTFQsAP/3Oi8Lj5E7ThWZ/1BOoDL/K+
+A32frbv8y6kIVQAyiLL3lDbOzN4UcEKztOcT10s9HVXlafTiJboqr6UkmKo5ISJb
+4gNDDa3R6e9qhuPwKKHoQqxnHeXlCVf74oPyWSkQdkDZyVk7AFGHiQlfDgOXR6Gl
+LZRE6oSN9sTp1uFeMnH4b5BTSb43Kg9i+46KRWGzOtECoRSUB8t/jSmFaSpxcGbQ
+lKQ6uabwhRBL1a5j4wx2+JbtXdS4GBZcaZdNFyeNZjwxy4jjKx28NG6mfswqc83j
+zHUihYXlk8ngON4krgBUXWfGliTmGlMXkWqmSRopZ19P8fXRj7vEeVmrEeytZ1nh
+2GKegP2kP7IIW28d8JqLhYO6EOTr3YW1uw6XAvRKSN8VmgulE2TDTE7+C+HBx9CZ
+WTxSIbU123FyXQNcSARB7gej7wk51xgiB+inIb7JnnLMYWbQsOE1A+BsZ7KpIKUt
+vMVJ3MKlysSTUNyZkK5Fl842yGiZgynuvF1OYyz2idlkfhu3E2PRYHHuJ2LeZFYu
+Pvic5xa3Ruzjjx24pg9JLWFubPtdQg9Ifgl+5x4CXXLv5FVrbckiMgnRSu+XjGGE
+kXJ9H6TfLEe7kg9c54A4nTdCX7sqBWhIL8FEp6wz4SHKCW6UOrnaW5sjE/Id0Idz
+2ViaSPfC9M1LjqEh58VC
+=klVV
+-----END PGP SIGNATURE-----
