@@ -1,18 +1,0 @@
-#!/sbin/runscript
-# Copyright 1999-2014 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/cronie/files/anacron-1.0-initd,v 1.4 2014/03/04 00:17:58 polynomial-c Exp $
-
-# anacron forks itself when -d gets omitted. So s-s-d fails to create a valid
-# pidfile. DO NOT remove -d from command_args and let s-s-d start anacron
-# in background!
-
-command="/usr/sbin/anacron"
-command_args="-d -s -S /var/spool/anacron"
-pidfile="/var/run/anacron.pid"
-command_background="true"
-
-depend() {
-	use clock logger
-	need localmount
-}
