@@ -1,15 +1,0 @@
-# for cronie
-# $Header: /var/cvsroot/gentoo-x86/sys-process/cronie/files/cronie-1.2-crontab,v 1.2 2009/05/12 09:10:59 bangert Exp $
-
-# Global variables
-SHELL=/bin/bash
-PATH=/sbin:/bin:/usr/sbin:/usr/bin
-MAILTO=root
-HOME=/
-
-# check scripts in cron.hourly, cron.daily, cron.weekly and cron.monthly
-59  *  * * *	root	rm -f /var/spool/cron/lastrun/cron.hourly
-9  3  * * *	root	rm -f /var/spool/cron/lastrun/cron.daily
-19 4  * * 6	root	rm -f /var/spool/cron/lastrun/cron.weekly
-29 5  1 * *	root	rm -f /var/spool/cron/lastrun/cron.monthly
-*/10  *  * * *	root	test -x /usr/sbin/run-crons && /usr/sbin/run-crons 
